tests/snapshots/test_runner__tests__compiler__typecheck__case_exhaustiveness_boolean_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let and = (x: Boolean, y: Boolean): Boolean =>
  switch ({ x, y }) {
    case { x: true, y: true }: true
    case _: false
    case _: false
  }

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/case_exhaustiveness_boolean_1.kk:5:10
  │
5 │     case _: false
  │          ^ Unreachable case
  │
  = This case is unreachable as it is already handled by previous cases.
